--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "glob": "^6.0.4",
     "method-override": "^2.3.0",
     "morgan": "^1.6.1",
+    "multer": "^1.1.0",
     "nodemailer": "^2.1.0",
     "papercut": "0.0.6",
     "pg": "^4.4.1",
