--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ckeditor": "^4.5.7",
     "compression": "^1.5.2",
     "cookie-parser": "^1.3.3",
+    "easyimage": "^2.1.0",
     "express": "^4.13.3",
     "express-handlebars": "^3.0.0",
     "font-awesome": "^4.5.0",
@@ -20,7 +21,6 @@
     "morgan": "^1.6.1",
     "node-env-file": "^0.1.8",
     "nodemailer": "^2.1.0",
-    "papercut": "0.0.6",
     "pg": "^4.4.1",
     "pg-hstore": "2.3.2",
     "sequelize": "^3.5.1",
