--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "compression": "^1.5.2",
     "cookie-parser": "^1.3.3",
     "express": "^4.13.3",
+    "express-flash": "0.0.2",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.13.0",
     "font-awesome": "^4.5.0",
     "friendly-url": "^1.0.2",
     "glob": "^6.0.4",
@@ -23,6 +25,8 @@
     "multer": "^1.1.0",
     "node-env-file": "^0.1.8",
     "nodemailer": "^2.1.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "pg": "^4.4.1",
     "pg-hstore": "2.3.2",
     "sequelize": "^3.5.1",
